# finch

./: CMakeLists.txt  notes
data/exp3_confs/: combination19_hardest_200.conf  combination19_hardest_400.conf  combination19_hardest_600.conf  combination28_hardest_200.conf  combination28_hardest_400.conf  combination28_hardest_600.conf  combination37_hardest_200.conf  combination37_hardest_400.conf  combination37_hardest_600.conf  combination46_hardest_200.conf  combination46_hardest_400.conf  combination46_hardest_600.conf  combination64_hardest_200.conf  combination64_hardest_400.conf  combination64_hardest_600.conf  combination73_hardest_200.conf  combination73_hardest_400.conf  combination73_hardest_600.conf  combination82_hardest_200.conf  combination82_hardest_400.conf  combination82_hardest_600.conf  combination91_hardest_200.conf  combination91_hardest_400.conf  combination91_hardest_600.conf  combination_hard_200.conf  combination_hard_400.conf  combination_hard_600.conf  combination_harder_200.conf  combination_harder_400.conf  combination_harder_600.conf  combination_hardest_200.conf  combination_hardest_400.conf  combination_hardest_600.conf  combination_moderate_200.conf  combination_moderate_400.conf  combination_moderate_600.conf  novelty_hard_200.conf  novelty_hard_400.conf  novelty_hard_600.conf  novelty_harder_200.conf  (+77 more)
data/hardest/: evolve_log-choosiness-200-0.csv  evolve_log-choosiness-200-1.csv  evolve_log-choosiness-200-10.csv  evolve_log-choosiness-200-11.csv  evolve_log-choosiness-200-12.csv  evolve_log-choosiness-200-13.csv  evolve_log-choosiness-200-14.csv  evolve_log-choosiness-200-15.csv  evolve_log-choosiness-200-16.csv  evolve_log-choosiness-200-17.csv  evolve_log-choosiness-200-18.csv  evolve_log-choosiness-200-19.csv  evolve_log-choosiness-200-2.csv  evolve_log-choosiness-200-20.csv  evolve_log-choosiness-200-21.csv  evolve_log-choosiness-200-22.csv  evolve_log-choosiness-200-23.csv  evolve_log-choosiness-200-24.csv  evolve_log-choosiness-200-25.csv  evolve_log-choosiness-200-26.csv  evolve_log-choosiness-200-27.csv  evolve_log-choosiness-200-28.csv  evolve_log-choosiness-200-29.csv  evolve_log-choosiness-200-3.csv  evolve_log-choosiness-200-30.csv  evolve_log-choosiness-200-31.csv  evolve_log-choosiness-200-32.csv  evolve_log-choosiness-200-33.csv  evolve_log-choosiness-200-34.csv  evolve_log-choosiness-200-35.csv  evolve_log-choosiness-200-36.csv  evolve_log-choosiness-200-37.csv  evolve_log-choosiness-200-38.csv  evolve_log-choosiness-200-39.csv  evolve_log-choosiness-200-4.csv  evolve_log-choosiness-200-40.csv  evolve_log-choosiness-200-5.csv  evolve_log-choosiness-200-6.csv  evolve_log-choosiness-200-7.csv  evolve_log-choosiness-200-8.csv  (+2980 more)
include/finch/: agent.hpp  agent_state.hpp  breeder.hpp  builder.hpp  choosiness_breeder.hpp  combination_fitness_mapper.hpp  csv.hpp  evaluation_results.hpp  evaluator.hpp  evolution.hpp  experimental_parameters.hpp  expression_simplifier.hpp  fitness_mapper.hpp  geometry.hpp  matrix2.hpp  maze_algorithms.hpp  maze_block_modifier.hpp  maze_block_modifier_digest.hpp  maze_modifier.hpp  maze_no_modifier.hpp  node.hpp  node_crossover_reproducer.hpp  node_type.hpp  node_type_set.hpp  normal_breeder.hpp  novelty_fitness_mapper.hpp  objective_fitness_mapper.hpp  option.hpp  output_manager.hpp  population.hpp  probabilistic_reproducer.hpp  program_node_types.hpp  program_state.hpp  random_breeder.hpp  reproducer.hpp  resource_breeder.hpp  speciation_breeder.hpp  speciation_fitness_mapper.hpp  tournament_breeder.hpp  tree_crossover_reproducer.hpp
include/finch/cpu/: cpu_evaluator.hpp  cpu_stepper.hpp
include/finch/cuda/: cuda_evaluator.hpp  info.hpp
include/finch/gradient_view/: gradient_view.hpp
include/finch/maze_run/: agent_stepper.hpp
include/finch/ui/: matrix2_view.hpp  ui_tools.hpp
src/: agent.cpp  breeder.cpp  builder.cpp  choosiness_breeder.cpp  csv.cpp  evaluation_results.cpp  evaluator.cpp  evolution.cpp  expression_simplifier.cpp  fitness_mapper.cpp  jsoncpp.cpp  main.cpp  maze_block_modifier.cpp  maze_block_modifier_digest.cpp  node.cpp  node_crossover_reproducer.cpp  node_type.cpp  normal_breeder.cpp  novelty_fitness_mapper.cpp  objective_fitness_mapper.cpp  output_manager.cpp  probabilistic_reproducer.cpp  program_node_types.cpp  program_state.cpp  random_breeder.cpp  reproducer.cpp  resource_breeder.cpp  speciation_breeder.cpp  speciation_fitness_mapper.cpp  tree_crossover_reproducer.cpp
src/cpu/: cpu_evaluator.cpp  cpu_program_interpreter.cpp  cpu_program_interpreter.hpp  cpu_stepper.cpp
src/csv_overview/: csv_overview.cpp
src/cuda/: cuda_evaluator.cu  info.cu  program_interpreter.cu  program_interpreter.hpp
src/gradient_view/: gradient_view.cpp
src/maze_digest_gen/: maze_digest_gen.cpp
src/maze_gen/: maze_gen.cpp
src/maze_run/: agent_stepper.cpp  main.cpp
src/maze_view/: maze_view.cpp
src/normal/: main.cpp
src/test_builder/: test_builder.cpp
src/test_reproducer/: test_reproducer.cpp
src/ui/: matrix2_view.cpp  ui_tools.cpp
ui/: agent_stepper.ui  gradient_view.ui
